--- a/files_handling.ipynb
+++ b/files_handling.ipynb
@@ -336,25 +336,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "439ceb1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "{'do': 1, 'you': 5, 'come': 1, 'from': 1, 'a': 1, 'land': 1, 'down': 1, 'under.': 1, 'where': 1, 'women': 1, 'glow': 1, 'and': 1, 'men': 1, 'plunder?': 1, \"can't\": 2, 'hear,': 1, 'hear': 1, 'the': 1, 'thunder?': 1, 'better': 2, 'run,': 1, 'take': 1, 'cover': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "attempt = \"Do you come from a land down under. Where women glow and men plunder? Can't you hear, can't you hear the thunder? You better run, you better take cover\"\n",
     "new_attempt_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\new_attempt.txt\"\n",
     "\n",
-    "def create_file(new_attempt_file, attempt) -> \n",
+    "def create_file(new_attempt_file, attempt):\n",
     "\n",
     "    with open(new_attempt_file, \"w\") as file:\n",
     "\n",
     "        return file.write(attempt)\n",
     "\n",
     "\n",
-    "    with open(new_attempt_file) as same_file:\n",
+    "def file_histogram(file) -> dict[str,int]:\n",
+    "\n",
+    "    with open(file) as same_file:\n",
+    "\n",
     "        file_per_histo = same_file.read()\n",
     "\n",
-    "    \n",
+    "        list_file_per_histo = file_per_histo.lower().split()\n",
+    "\n",
+    "        print(type(list_file_per_histo))\n",
+    "\n",
+    "        histogram = {}\n",
+    "\n",
+    "        for word in list_file_per_histo:\n",
+    "\n",
+    "            if word in histogram:\n",
+    "\n",
+    "                histogram[word] += 1\n",
+    "\n",
+    "            else:\n",
+    "\n",
+    "                histogram[word] = 1\n",
+    "\n",
+    "    return histogram\n",
+    "\n",
+    "\n",
+    "create_file(new_attempt_file, attempt)\n",
+    "\n",
+    "print(file_histogram(new_attempt_file))    \n",
     "\n"
    ]
   },
