--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -384,12 +384,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ce1a515",
+   "metadata": {},
+   "source": [
+    "##### 7 In a dictionary, check if the value is a str. Then check if that value is a mix of letters and numbers. Then check if the length of the string is exactly 8 characters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "07f3c6d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_dict = {\n",
+    "    \"user1\": \"abc12345\",  \n",
+    "    \"user2\": \"ABCDEFGH\",   \n",
+    "    \"user3\": \"12345678\",   \n",
+    "    \"user4\": \"a1b2c3\",     \n",
+    "    \"user5\": 98765432,    \n",
+    "    \"user6\": \"ab12cd34\",   \n",
+    "    \"user7\": \"hello\",      \n",
+    "    \"user8\": \"xy9z8w7q\",   \n",
+    "}\n",
+    "\n",
+    "def password_checks(sample_dict) -> None:\n",
+    "\n",
+    "    # 1. Check that the password is a string type\n",
+    "\n",
+    "    for password in sample_dict.values():\n",
+    "\n",
+    "        if not isinstance(password, str):\n",
+    "\n",
+    "            raise ValueError\n",
+    "        \n",
+    "        else:\n",
+    "\n",
+    "            print(\"The password is a str\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # 2. Check if there are at least one letter or one number\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        letters = False\n",
+    "        numbers = False\n",
+    "\n",
+    "        for password in sample_dict.values():\n",
+    "\n",
+    "            for char in password:\n",
+    "\n",
+    "                if char.isalpha():\n",
+    "\n",
+    "                    letters = True\n",
+    "\n",
+    "                if char.isdigit():\n",
+    "\n",
+    "                    numbers = True\n",
+    "\n",
+    "        if letters and numbers:\n",
+    "\n",
+    "            print(\"The password has letters and numbers\")\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            raise ValueError\n",
+    "        \n",
+    "    except ValueError:\n",
+    "\n",
+    "        print(\"The password must contain at least one letter and one number\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
