--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -411,28 +411,24 @@
     "\n",
     "def password_checks(sample_dict) -> None:\n",
     "\n",
+    "\n",
     "    # 1. Check that the password is a string type\n",
     "\n",
-    "    for password in sample_dict.values():\n",
+    "    try:\n",
     "\n",
-    "        if not isinstance(password, str):\n",
+    "        for password in sample_dict.values():\n",
     "\n",
-    "            raise ValueError\n",
-    "        \n",
-    "        else:\n",
+    "            if not isinstance(password, str):\n",
     "\n",
-    "            print(\"The password is a str\")\n",
-    "\n",
-    "\n",
-    "\n",
+    "                raise ValueError\n",
     "            \n",
+    "            else:\n",
     "\n",
+    "                print(\"The password is a str\")\n",
     "\n",
+    "    except ValueError:\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "        print(\"Not all password are string\")    \n",
     "\n",
     "\n",
     "    # 2. Check if there are at least one letter or one number\n",
@@ -465,6 +461,17 @@
     "    except ValueError:\n",
     "\n",
     "        print(\"The password must contain at least one letter and one number\")\n",
+    "\n",
+    "    \n",
+    "    # 3. Check the lenght of the string\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        for password in sample_dict.values():\n",
+    "\n",
+    "            if len(password)!= 8:\n",
+    "\n",
+    "                raise \n",
     "\n",
     "\n",
     "\n",
