--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -396,7 +396,61 @@
    "execution_count": null,
    "id": "07f3c6d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The password is a str.\n",
+      "The password is a str.\n",
+      "The password is a str.\n",
+      "The password is a str.\n",
+      "Not all password are string.\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n",
+      "E\n",
+      "F\n",
+      "G\n",
+      "H\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "a\n",
+      "1\n",
+      "b\n",
+      "2\n",
+      "c\n",
+      "3\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 87\u001b[39m\n\u001b[32m     82\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m:\n\u001b[32m     84\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThe password does not have the right lenght.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m \u001b[43mpassword_checks\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_dict\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 43\u001b[39m, in \u001b[36mpassword_checks\u001b[39m\u001b[34m(sample_dict)\u001b[39m\n\u001b[32m     39\u001b[39m numbers = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m     41\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m password \u001b[38;5;129;01min\u001b[39;00m sample_dict.values():\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mchar\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpassword\u001b[49m\u001b[43m:\u001b[49m\n\u001b[32m     45\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mchar\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     47\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mchar\u001b[49m\u001b[43m.\u001b[49m\u001b[43misalpha\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: 'int' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "sample_dict = {\n",
     "    \"user1\": \"abc12345\",  \n",
@@ -424,11 +478,11 @@
     "            \n",
     "            else:\n",
     "\n",
-    "                print(\"The password is a str\")\n",
+    "                print(\"The password is a str.\")\n",
     "\n",
     "    except ValueError:\n",
     "\n",
-    "        print(\"Not all password are string\")    \n",
+    "        print(\"Not all password are string.\")    \n",
     "\n",
     "\n",
     "    # 2. Check if there are at least one letter or one number\n",
@@ -452,7 +506,7 @@
     "\n",
     "        if letters and numbers:\n",
     "\n",
-    "            print(\"The password has letters and numbers\")\n",
+    "            print(\"The password has letters and numbers.\")\n",
     "\n",
     "        else:\n",
     "\n",
@@ -460,7 +514,7 @@
     "        \n",
     "    except ValueError:\n",
     "\n",
-    "        print(\"The password must contain at least one letter and one number\")\n",
+    "        print(\"The password must contain at least one letter and one number.\")\n",
     "\n",
     "    \n",
     "    # 3. Check the lenght of the string\n",
@@ -471,17 +525,27 @@
     "\n",
     "            if len(password)!= 8:\n",
     "\n",
-    "                raise \n",
+    "                raise ValueError\n",
+    "            \n",
+    "            else:\n",
+    "\n",
+    "                print (\"The password has the exact lenght.\")\n",
+    "\n",
+    "    except ValueError:\n",
+    "\n",
+    "        print(\"The password does not have the right lenght.\")\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "password_checks(sample_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d48f5dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
