--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "07f3c6d9",
    "metadata": {},
    "outputs": [
@@ -406,12 +406,15 @@
       "The password is a str.\n",
       "The password is a str.\n",
       "Not all password are string.\n",
+      "\n",
       "The password has letters and numbers.\n",
       "The password must contain at least one letter and one number.\n",
+      "\n",
       "The password has the exact lenght.\n",
       "The password has the exact lenght.\n",
       "The password has the exact lenght.\n",
-      "The password does not have the right lenght.\n"
+      "The password does not have the right lenght.\n",
+      "\n"
      ]
     }
    ],
@@ -478,7 +481,7 @@
     "        \n",
     "    except ValueError:\n",
     "\n",
-    "        print(\"The password must contain at least one letter and one number.\")\n",
+    "        print(f\"The password must contain at least one letter and one number.\\n\")\n",
     "\n",
     "    \n",
     "    # 3. Check the lenght of the string\n",
@@ -497,7 +500,7 @@
     "\n",
     "    except ValueError:\n",
     "\n",
-    "        print(\"The password does not have the right lenght.\")\n",
+    "        print(f\"The password does not have the right lenght.\\n\")\n",
     "\n",
     "\n",
     "password_checks(sample_dict)"
