--- a/lists.ipynb
+++ b/lists.ipynb
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0ebf9e6f",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
     "list_mix = [1,3,6,23,\"eight\",9,1,7,4,\"TWo\"]\n",
     "#print(list_mix)\n",
     "\n",
-    "# Create a list for comparing the eventual words found in the list\n",
+    "# Create a list for comparing the eventual number string found in the list\n",
     "comperable_list = [\"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\", \"zero\"]\n",
     "\n",
     "for element in range(len(list_mix)):    \n",
