--- a/oops.ipynb
+++ b/oops.ipynb
@@ -669,12 +669,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "733ddb01",
+   "metadata": {},
+   "source": [
+    "##### 13. Create a chess board with the following specifications:\n",
+    "- The board should be represented as an 8x8 grid.\n",
+    "- A method should check if a move is valid based on the piece's movement rules.\n",
+    "- A method that check if a square is occupied or not."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e6e30266",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Board:\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        self.grid = []\n",
+    "        for _ in range(8):              \n",
+    "            row = []\n",
+    "            for _ in range(8):          \n",
+    "                row.append(None)       \n",
+    "            self.grid.append(row)\n",
+    "\n",
+    "    def in_bounds(self, row: int, col: int) -> bool:\n",
+    "\n",
+    "        return 0 <= row < 8 and 0 <= col < 8\n",
+    "    \n",
+    "    def is_occupied(self, row:int, col: int) -> bool:\n",
+    "\n",
+    "        return self.in_bounds(row,col) and self.grid[row][col]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e37e3e25",
+   "metadata": {},
+   "source": [
+    "#####  14. Considering the chess board from the previous exercise, create a class piece with common attributes and a class Pawn that inherits from piece.  In this class implement a method is valid move that checks if the pawn move is valid or not."
+   ]
   }
  ],
  "metadata": {
