--- a/oops.ipynb
+++ b/oops.ipynb
@@ -712,6 +712,34 @@
    "source": [
     "#####  14. Considering the chess board from the previous exercise, create a class piece with common attributes and a class Pawn that inherits from piece.  In this class implement a method is valid move that checks if the pawn move is valid or not."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bed98f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Piece:\n",
+    "\n",
+    "    def __init__(self, name: str, board: Board)-> None:\n",
+    "\n",
+    "        self.name = name\n",
+    "        self.board = board \n",
+    "\n",
+    "\n",
+    "class Pawn(Piece):\n",
+    "\n",
+    "    def __init__(self, name: str, color: int, row: int, col: int, board: Board)-> None:\n",
+    "\n",
+    "        super().__init__(name, board)\n",
+    "\n",
+    "        self.color = color\n",
+    "        self.row = row\n",
+    "        self.col = col\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
