--- a/oops.ipynb
+++ b/oops.ipynb
@@ -738,7 +738,47 @@
     "        self.row = row\n",
     "        self.col = col\n",
     "\n",
-    "        "
+    "    def is_valid(self, row: int, col:int) -> bool:\n",
+    "\n",
+    "        if self.board.in_bounds(row,col) and not self.board.is_occupied(row,col):\n",
+    "        \n",
+    "            if self.color == \"white\":\n",
+    "\n",
+    "                if self.row == 1:\n",
+    "\n",
+    "                    if row - self.row == 2 or row - self.row == 1:\n",
+    "                        return True\n",
+    "                    else:\n",
+    "                        return False\n",
+    "                    \n",
+    "                elif self.row != 1:\n",
+    "\n",
+    "                    if row - self.row == 1:\n",
+    "                        return True\n",
+    "                    else:\n",
+    "                        return False\n",
+    "                    \n",
+    "            if self.color == \"black\":\n",
+    "\n",
+    "                if self.row == 6:\n",
+    "\n",
+    "                    if self.row - row == 2 or self.row - row == 1:\n",
+    "                        return True\n",
+    "                    else:\n",
+    "                        return False\n",
+    "                    \n",
+    "                elif self.row != 6:\n",
+    "\n",
+    "                    if self.row - row == 1:\n",
+    "                        return True\n",
+    "                    else:\n",
+    "                        return False\n",
+    "                    \n",
+    "        if self.board.in_bounds(row,col) and self.board.is_occupied(row,col):\n",
+    "\n",
+    "                \n",
+    "\n",
+    "\n"
    ]
   }
  ],
