--- a/oops.ipynb
+++ b/oops.ipynb
@@ -776,9 +776,23 @@
     "                    \n",
     "        if self.board.in_bounds(row,col) and self.board.is_occupied(row,col):\n",
     "\n",
-    "                \n",
+    "            if self.color == \"white\":\n",
     "\n",
-    "\n"
+    "                if row - self.row == 1 and col - self.col == 1:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    return False    \n",
+    "                \n",
+    "            if self.color == \"black\":\n",
+    "\n",
+    "                if self.row - row == 1 and self.col - col == 1:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    return False \n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n"
    ]
   }
  ],
