--- a/oops.ipynb
+++ b/oops.ipynb
@@ -715,30 +715,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bed98f0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "\n",
+      "\n",
+      "False\n",
+      "True\n",
+      "\n",
+      "\n",
+      "True\n",
+      "True\n",
+      "\n",
+      "\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "class Piece:\n",
     "\n",
-    "    def __init__(self, name: str, board: Board)-> None:\n",
+    "    def __init__(self, board: Board)-> None:\n",
     "\n",
-    "        self.name = name\n",
     "        self.board = board \n",
     "\n",
     "\n",
     "class Pawn(Piece):\n",
     "\n",
-    "    def __init__(self, name: str, color: int, row: int, col: int, board: Board)-> None:\n",
+    "    def __init__(self, color: int, row: int, col: int, board: Board)-> None:\n",
     "\n",
-    "        super().__init__(name, board)\n",
+    "        super().__init__(board)\n",
     "\n",
     "        self.color = color\n",
     "        self.row = row\n",
     "        self.col = col\n",
     "\n",
-    "    def is_valid(self, row: int, col:int) -> bool:\n",
+    "    def is_valid_move(self, row: int, col:int) -> bool:\n",
     "\n",
     "        if self.board.in_bounds(row,col) and not self.board.is_occupied(row,col):\n",
     "        \n",
@@ -792,7 +813,36 @@
     "\n",
     "\n",
     "\n",
-    "        \n"
+    "board = Board()\n",
+    "\n",
+    "white_pawn = Pawn(\"white\", 1, 3, board)\n",
+    "board.grid[1][3] = white_pawn\n",
+    "\n",
+    "black_pawn = Pawn(\"black\", 6, 4, board)\n",
+    "board.grid[6][4] = black_pawn\n",
+    "\n",
+    "capture_piece = Pawn(\"black\", 2, 4, board)\n",
+    "board.grid[2][4] = capture_piece\n",
+    "\n",
+    "board.grid[5][4] = Pawn(\"white\", 5, 4, board)\n",
+    "\n",
+    "print(white_pawn.is_valid_move(2,3))\n",
+    "print(white_pawn.is_valid_move(3,3))\n",
+    "print(white_pawn.is_valid_move(1,4))\n",
+    "print(white_pawn.is_valid_move(2,4))\n",
+    "print(\"\\n\")\n",
+    "print(black_pawn.is_valid_move(5,4))\n",
+    "print(black_pawn.is_valid_move(4,4))\n",
+    "print(\"\\n\")\n",
+    "board.grid[5][4] = None\n",
+    "print(black_pawn.is_valid_move(5,4))\n",
+    "print(black_pawn.is_valid_move(4,4))\n",
+    "print(\"\\n\")\n",
+    "print(capture_piece.is_valid_move(0,4))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
