--- a/oops.ipynb
+++ b/oops.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bed98f0d",
    "metadata": {},
    "outputs": [
@@ -760,6 +760,8 @@
     "        self.col = col\n",
     "\n",
     "    def is_valid_move(self, row: int, col:int) -> bool:\n",
+    "\n",
+    "        \n",
     "\n",
     "        if self.board.in_bounds(row,col) and not self.board.is_occupied(row,col):\n",
     "        \n",
@@ -838,12 +840,16 @@
     "print(black_pawn.is_valid_move(5,4))\n",
     "print(black_pawn.is_valid_move(4,4))\n",
     "print(\"\\n\")\n",
-    "print(capture_piece.is_valid_move(0,4))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(capture_piece.is_valid_move(0,4))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4d35e51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
