--- a/oops.ipynb
+++ b/oops.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bed98f0d",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
       "\n",
       "\n",
       "False\n",
-      "True\n",
+      "False\n",
       "\n",
       "\n",
       "True\n",
@@ -751,7 +751,7 @@
     "\n",
     "class Pawn(Piece):\n",
     "\n",
-    "    def __init__(self, color: int, row: int, col: int, board: Board)-> None:\n",
+    "    def __init__(self, color: str, row: int, col: int, board: Board)-> None:\n",
     "\n",
     "        super().__init__(board)\n",
     "\n",
@@ -759,59 +759,56 @@
     "        self.row = row\n",
     "        self.col = col\n",
     "\n",
-    "    def is_valid_move(self, row: int, col:int) -> bool:\n",
+    "    def is_valid_move(self, row: int, col: int) -> bool:\n",
     "\n",
+    "        if not self.board.in_bounds(row, col):\n",
+    "            return False\n",
     "        \n",
+    "        if self.color == \"white\":\n",
+    "            if self.board.is_occupied(self.row +1, self.col):\n",
+    "                return False\n",
+    "        if self.color == \"black\":\n",
+    "            if self.board.is_occupied(self.row -1, self.col):\n",
+    "                return False\n",
     "\n",
-    "        if self.board.in_bounds(row,col) and not self.board.is_occupied(row,col):\n",
-    "        \n",
+    "\n",
+    "        if not self.board.is_occupied(row, col):\n",
+    "\n",
+    "            if col != self.col:\n",
+    "                return False\n",
+    "            \n",
     "            if self.color == \"white\":\n",
-    "\n",
     "                if self.row == 1:\n",
-    "\n",
-    "                    if row - self.row == 2 or row - self.row == 1:\n",
+    "                    if row - self.row == 1 or row - self.row == 2:\n",
     "                        return True\n",
-    "                    else:\n",
-    "                        return False\n",
-    "                    \n",
-    "                elif self.row != 1:\n",
-    "\n",
-    "                    if row - self.row == 1:\n",
-    "                        return True\n",
-    "                    else:\n",
-    "                        return False\n",
-    "                    \n",
+    "                if row - self.row == 1:\n",
+    "                    return True\n",
+    "                return False\n",
+    "            \n",
     "            if self.color == \"black\":\n",
-    "\n",
     "                if self.row == 6:\n",
-    "\n",
-    "                    if self.row - row == 2 or self.row - row == 1:\n",
+    "                    if self.row - row == 1 or self.row - row == 2:\n",
     "                        return True\n",
-    "                    else:\n",
-    "                        return False\n",
-    "                    \n",
-    "                elif self.row != 6:\n",
+    "                if self.row - row == 1:\n",
+    "                    return True\n",
+    "                return False\n",
     "\n",
-    "                    if self.row - row == 1:\n",
-    "                        return True\n",
-    "                    else:\n",
-    "                        return False\n",
-    "                    \n",
-    "        if self.board.in_bounds(row,col) and self.board.is_occupied(row,col):\n",
+    "        if self.board.is_occupied(row, col):\n",
+    "\n",
+    "            target_piece = self.board.grid[row][col]\n",
+    "            if target_piece.color == self.color:\n",
+    "                return False \n",
     "\n",
     "            if self.color == \"white\":\n",
-    "\n",
-    "                if row - self.row == 1 and col - self.col == 1:\n",
+    "                if row - self.row == 1 and abs(col - self.col) == 1:\n",
     "                    return True\n",
-    "                else:\n",
-    "                    return False    \n",
-    "                \n",
+    "            \n",
     "            if self.color == \"black\":\n",
-    "\n",
-    "                if self.row - row == 1 and self.col - col == 1:\n",
+    "                if self.row - row == 1 and abs(col - self.col) == 1:\n",
     "                    return True\n",
-    "                else:\n",
-    "                    return False \n",
+    "\n",
+    "        return False\n",
+    " \n",
     "\n",
     "\n",
     "\n",
