--- a/files_handling.ipynb
+++ b/files_handling.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "439ceb1c",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'list'>\n",
       "{'do': 1, 'you': 5, 'come': 1, 'from': 1, 'a': 1, 'land': 1, 'down': 1, 'under.': 1, 'where': 1, 'women': 1, 'glow': 1, 'and': 1, 'men': 1, 'plunder?': 1, \"can't\": 2, 'hear,': 1, 'hear': 1, 'the': 1, 'thunder?': 1, 'better': 2, 'run,': 1, 'take': 1, 'cover': 1}\n"
      ]
     }
@@ -368,7 +367,7 @@
     "\n",
     "        list_file_per_histo = file_per_histo.lower().split()\n",
     "\n",
-    "        print(type(list_file_per_histo))\n",
+    "        #print(type(list_file_per_histo))\n",
     "\n",
     "        histogram = {}\n",
     "\n",
@@ -392,9 +391,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88d9a2a2",
+   "metadata": {},
+   "source": [
+    "##### 12. Read a file and print its content in reverse order (last line first, first line last)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "7e6808a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "But if significant changes to health care arenâ€™t in the bill, itâ€™s unlikely to pass.File APPENDED\n",
+      "\n",
+      "\n",
+      "The revised bill put forward will likely keep the federal government's lights on past Thanksgiving.\n",
+      "\n",
+      "\n",
+      "\n",
+      "For weeks, Democrats have refused to vote to reopen the government without major investments in reducing health care costs.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Food aid programmes have been paused, hundreds of federal workers remain unpaid, and there are huge flight disruptions at major airports like here in DC.\n",
+      "\n",
+      "\n",
+      "\n",
+      "This shutdown, which began on 1 October, has caused unprecedented disruptions in the country.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "open_file = open(file, 'r')\n",
+    "\n",
+    "read_file = open_file.readlines()\n",
+    "\n",
+    "for line in range(len(read_file)-1,-1,-1):\n",
+    "\n",
+    "    print(read_file[line])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6808a5",
+   "id": "57acdf98",
    "metadata": {},
    "outputs": [],
    "source": []
