--- a/oops.ipynb
+++ b/oops.ipynb
@@ -841,6 +841,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a675062b",
+   "metadata": {},
+   "source": [
+    "##### 15. From two csv files (characters, equipment) create a cllass Character that has attributes from both files. The file structure are as follows:\n",
+    "- characters.csv: id, name, class\n",
+    "- equipment.csv: character_id, item, slot\n",
+    "\n",
+    "The expected output is a list of characters with their respective equipment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4d35e51",
