--- a/oops.ipynb
+++ b/oops.ipynb
@@ -858,6 +858,29 @@
    "id": "d4d35e51",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Character:\n",
+    "\n",
+    "    def __init__(self, char: tuple, equipment: dict)-> None:\n",
+    "\n",
+    "        self.char = char\n",
+    "        self.equipment = equipment\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "\n",
+    "        return f\"Character{self.char}\\nEquipment: {self.equipment}\"\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22761698",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
