--- a/oops.ipynb
+++ b/oops.ipynb
@@ -859,16 +859,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "\n",
     "class Character:\n",
     "\n",
-    "    def __init__(self, char: tuple, equipment: dict)-> None:\n",
+    "    def __init__(self, char_id, char: tuple, equipment: dict)-> None:\n",
     "\n",
+    "        self.char_id = char_id\n",
     "        self.char = char\n",
     "        self.equipment = equipment\n",
     "\n",
     "    def __str__(self) -> str:\n",
     "\n",
-    "        return f\"Character{self.char}\\nEquipment: {self.equipment}\"\n",
+    "        if self.char_id and self.char and self.equipment:\n",
+    "\n",
+    "            return f\"Character{self.char}\\nEquipment: {self.equipment}\"\n",
+    "        \n",
+    "\n",
+    "def load_characters(char_file, equip_file)-> list[Character]:\n",
+    "\n",
+    "    list_char = []\n",
+    "\n",
+    "    with open(char_file) as char:\n",
+    "        reader_1 = csv.DictReader(char)\n",
+    "\n",
+    "        for header in reader_1:\n",
+    "            list_char.append((header[\"character_id\"],header[\"name\"],header[\"character_class\"]))\n",
+    "\n",
+    "    \n",
+    "\n",
     "    \n",
     "\n",
     "\n",
