--- a/oops.ipynb
+++ b/oops.ipynb
@@ -886,7 +886,16 @@
     "        for header in reader_1:\n",
     "            list_char.append((header[\"character_id\"],header[\"name\"],header[\"character_class\"]))\n",
     "\n",
-    "    \n",
+    "    dict_equip = {}\n",
+    "\n",
+    "    with open(equip_file) as equip:\n",
+    "        reader_2 = csv.DictReader(equip)\n",
+    "\n",
+    "        for header in reader_2:\n",
+    "            if header[\"character_id\"] not in dict_equip:\n",
+    "                dict_equip[header[\"character_id\"]] = {}\n",
+    "            else:\n",
+    "                dict_equip[header[\"character_id\"]][header[\"slot\"]] = header[\"item\"]\n",
     "\n",
     "    \n",
     "\n",
