--- a/oops.ipynb
+++ b/oops.ipynb
@@ -854,10 +854,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d4d35e51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== All Characters ===\n",
+      "Character('1', 'Shadowblade', 'Rogue')\n",
+      "Equipment: {'Armor': 'Leather Armor', 'Feet': 'Stealth Boots'}\n",
+      "\n",
+      "Character('2', 'Thunderfist', 'Warrior')\n",
+      "Equipment: {'Armor': 'Plate Armor', 'Head': 'Warrior Helmet'}\n",
+      "\n",
+      "Character('3', 'Frostweaver', 'Mage')\n",
+      "Equipment: {'Armor': 'Robe', 'Head': 'Wizard Hat'}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -876,20 +893,25 @@
     "            return f\"Character{self.char}\\nEquipment: {self.equipment}\"\n",
     "        \n",
     "\n",
+    "        \n",
+    "\n",
     "def load_characters(char_file, equip_file)-> list[Character]:\n",
     "\n",
     "    list_char = []\n",
     "\n",
-    "    with open(char_file) as char:\n",
-    "        reader_1 = csv.DictReader(char)\n",
+    "    with open(char_file, encoding=\"utf-8-sig\") as char:\n",
+    "        reader_1 = csv.DictReader(char, delimiter=\";\")\n",
     "\n",
     "        for header in reader_1:\n",
-    "            list_char.append((header[\"character_id\"],header[\"name\"],header[\"character_class\"]))\n",
+    "            id = header[\"character_id\"]\n",
+    "            name = header[\"name\"]\n",
+    "            ch_class = header[\"character_class\"]\n",
+    "            list_char.append((id,name,ch_class))\n",
     "\n",
     "    dict_equip = {}\n",
     "\n",
-    "    with open(equip_file) as equip:\n",
-    "        reader_2 = csv.DictReader(equip)\n",
+    "    with open(equip_file, encoding=\"utf-8-sig\") as equip:\n",
+    "        reader_2 = csv.DictReader(equip, delimiter=\";\")\n",
     "\n",
     "        for header in reader_2:\n",
     "            if header[\"character_id\"] not in dict_equip:\n",
@@ -898,6 +920,26 @@
     "                dict_equip[header[\"character_id\"]][header[\"slot\"]] = header[\"item\"]\n",
     "\n",
     "    \n",
+    "    list_of_all = []\n",
+    "    \n",
+    "    for char in list_char:\n",
+    "        for id, equip in dict_equip.items():\n",
+    "            if char[0] == id:\n",
+    "                list_of_all.append(Character(id,char,equip))\n",
+    "    \n",
+    "    return list_of_all\n",
+    "\n",
+    "characters_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\characters.csv\"\n",
+    "equipments_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\equipment.csv\"\n",
+    "\n",
+    "characters = load_characters(characters_file,equipments_file)\n",
+    "\n",
+    "\n",
+    "print(\"=== All Characters ===\")\n",
+    "for character in characters:\n",
+    "    print(character)\n",
+    "    print()\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -907,6 +949,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22761698",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12cf3b9b",
    "metadata": {},
    "outputs": [],
    "source": []
