--- a/oops.ipynb
+++ b/oops.ipynb
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d4d35e51",
    "metadata": {},
    "outputs": [
@@ -863,14 +863,15 @@
      "output_type": "stream",
      "text": [
       "=== All Characters ===\n",
+      "\n",
       "Character('1', 'Shadowblade', 'Rogue')\n",
-      "Equipment: {'Armor': 'Leather Armor', 'Feet': 'Stealth Boots'}\n",
+      "Equipment: {'Weapon': 'Dagger', 'Armor': 'Leather Armor', 'Feet': 'Stealth Boots'}\n",
       "\n",
       "Character('2', 'Thunderfist', 'Warrior')\n",
-      "Equipment: {'Armor': 'Plate Armor', 'Head': 'Warrior Helmet'}\n",
+      "Equipment: {'Weapon': 'Sword', 'Armor': 'Plate Armor', 'Head': 'Warrior Helmet'}\n",
       "\n",
       "Character('3', 'Frostweaver', 'Mage')\n",
-      "Equipment: {'Armor': 'Robe', 'Head': 'Wizard Hat'}\n",
+      "Equipment: {'Weapon': 'Staff', 'Armor': 'Robe', 'Head': 'Wizard Hat'}\n",
       "\n"
      ]
     }
@@ -897,6 +898,8 @@
     "\n",
     "def load_characters(char_file, equip_file)-> list[Character]:\n",
     "\n",
+    "    # OPEN AND STORE THE INFO OF THE CHARACTERS FILE.\n",
+    "\n",
     "    list_char = []\n",
     "\n",
     "    with open(char_file, encoding=\"utf-8-sig\") as char:\n",
@@ -908,18 +911,23 @@
     "            ch_class = header[\"character_class\"]\n",
     "            list_char.append((id,name,ch_class))\n",
     "\n",
+    "\n",
+    "    # OPEN AND STORE THE INFO OF THE EQUIPMENT FILE.\n",
+    "\n",
     "    dict_equip = {}\n",
     "\n",
     "    with open(equip_file, encoding=\"utf-8-sig\") as equip:\n",
     "        reader_2 = csv.DictReader(equip, delimiter=\";\")\n",
-    "\n",
+    "        \n",
     "        for header in reader_2:\n",
     "            if header[\"character_id\"] not in dict_equip:\n",
     "                dict_equip[header[\"character_id\"]] = {}\n",
-    "            else:\n",
-    "                dict_equip[header[\"character_id\"]][header[\"slot\"]] = header[\"item\"]\n",
+    "        \n",
+    "            dict_equip[header[\"character_id\"]][header[\"slot\"]] = header[\"item\"]\n",
     "\n",
-    "    \n",
+    "\n",
+    "    # MAPPING THE RESULT OF THE TWO FILE INTO A SINGLE LIST OF CHARACTERS OBJECT\n",
+    "\n",
     "    list_of_all = []\n",
     "    \n",
     "    for char in list_char:\n",
@@ -929,37 +937,21 @@
     "    \n",
     "    return list_of_all\n",
     "\n",
+    "# TESTING\n",
+    "\n",
     "characters_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\characters.csv\"\n",
     "equipments_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\equipment.csv\"\n",
     "\n",
     "characters = load_characters(characters_file,equipments_file)\n",
     "\n",
     "\n",
-    "print(\"=== All Characters ===\")\n",
+    "print(\"=== All Characters ===\\n\")\n",
     "for character in characters:\n",
     "    print(character)\n",
     "    print()\n",
     "\n",
-    "\n",
-    "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22761698",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12cf3b9b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
