--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -507,6 +507,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1789048",
+   "metadata": {},
+   "source": [
+    "##### 8. Create a funcion to check a single password. The code should check different conditions, and raise exceptions for each failed condition, so that the code does not stop at the first failure. The conditions are:\n",
+    "- lenght of password\n",
+    "- contains at least one uppercase letter\n",
+    "- contains at least one special character\n",
+    "- no spaces allowed\n",
+    "\n",
+    "##### The conditions are given as parameters to the function, so that eventually not all conditions have to be checked."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d48f5dd0",
